# QrCodePython

./: main.py  pyproject.toml
