[tool.poetry]
name = "repl_python3_QrCode"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyQRCode = "^1.2.1"
pyzbar = "^0.1.8"
pypng = "^0.0.21"
pil-compat = "^1.0.0"
decode = "^0.5.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
